// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoLink renders a normal for anchor hrefs 1`] = `
<a
  class="test-class"
  href="#anchor-123"
>
  Hello World
</a>
`;

exports[`AutoLink renders a normal for relative hrefs 1`] = `
<a
  class="test-class"
  href="/foo/bar"
>
  Hello World
</a>
`;

exports[`AutoLink renders an external link for full URLs 1`] = `
<a
  class="test-class"
  href="https://example.com/foo"
  rel="noopener noreferrer"
  target="_blank"
>
  Hello World
  <span
    class="bp3-icon bp3-icon-share"
    icon="share"
    style="vertical-align: baseline; padding-left: 4px;"
  >
    <svg
      data-icon="share"
      height="12"
      viewBox="0 0 16 16"
      width="12"
    >
      <desc>
        share
      </desc>
      <path
        d="M10.99 13.99h-9v-9h4.76l2-2H.99c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V7.24l-2 2v4.75zm4-14h-5c-.55 0-1 .45-1 1s.45 1 1 1h2.59L7.29 7.28a1 1 0 00-.3.71 1.003 1.003 0 001.71.71l5.29-5.29V6c0 .55.45 1 1 1s1-.45 1-1V1c0-.56-.45-1.01-1-1.01z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</a>
`;
